<resources>
    <string name="app_name">SmartOnApp</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Accueil</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_intervention">Interventions</string>
    <string name="previousInterv">Interventions effectuées</string>
    <string name="title_auth_site" translatable="false">Authentification au site</string>
    <string name="title_profile">Profil</string>
    <string name="warningTitle">Alertes</string>


    <string name="hintEmail">Email</string>
    <string name="hintPass">Mot de passe</string>
    <string name="login_btn_text">Se connecter</string>
    <string name="reconnectMsg">Une erreur s\'est produite, essayez de vous reconnecter</string>
    <string name="logout_btn_text" translatable="false">Déconnexion</string>
    <string name="language_btn_text" translatable="false">Langue</string>
    <string name="login_btn_forgot_pass">Mot de passe oublié ?</string>
    <string name="app_logo">Application Logo</string>
    <string name="infos_incorrect_msg" translatable="false">Email ou Mot de passe incorrect</string>
    <string name="auth_site_loading_msg" translatable="false">Email ou Mot de passe incorrect</string>
    <string name="chaudiereName" translatable="false">Chaudère</string>
    <string name="ballonName" translatable="false">Ballon de chaudière</string>

    <string name="temp1Text">T° de départ</string>
    <string name="temp2Text">T° de retour</string>
    <string name="temp3Text">T° d\'inertie</string>
    <string name="temp4Text">T° des fumées</string>
    <string name="temp5Text">Dépression</string>
    <string name="temp6Text">Luminosité</string>
    <string name="temp7Text">Temp N7</string>
    <string name="temp8Text">Temp N8</string>
    <string name="error404" translatable="false">Erreur 404</string>
    <string name="coming_soon" translatable="false">Bientôt disponible</string>
    <string name="generalErreur" translatable="false">Une erreur s\'est produite lors de la connexion au serveur</string>
    <string name="cnxMainErreur" translatable="false">Impossible de se connecter à Internet</string>
    <string name="cnxSecondErreur" translatable="false">L\'application ne peut pas fonctionner hors connexion, vérifiez votre connexion et essayez.</string>


    <string name="modeOperatoire" translatable="false">Mode opératoire :</string>
    <string name="usedToold" translatable="false">Outils utilisés :</string>
    <string name="Interv_desc" translatable="false">Description :</string>
    <string name="task" translatable="false">Tache </string>
    <string name="zone" translatable="false">Zone : </string>


    <string name="cnxStatusTitle" translatable="false">Statut de connexion : </string>
    <string name="cnxStatusMsgOnline" translatable="false">En Ligne</string>
    <string name="cnxStatusMsgOffline" translatable="false">Hors ligne</string>

    <string name="authSiteSuccess" translatable="false">Authentification au site avec succès</string>
    <string name="authSiteFailed" translatable="false">Échec de l\'authentification au site</string>

    <string name="confirmInterv" translatable="false">Glisser pour démarrer l\'intervention</string>
    <string name="nfcScanReady" translatable="false">Prêt à scanner ...</string>
    <string name="nfcNotSupported" translatable="false">NFC n\'est pas pris en charge dans cet appareil</string>
    <string name="noDisponible" translatable="false">Non disponible</string>
    <string name="noBalloons" translatable="false">Pas de ballons sur ce site</string>
    <string name="noSilos" translatable="false">Pas de silos sur ce site</string>
    <string name="temperature" translatable="false">Température</string>


    <string name="intervTitle" translatable="false">Vos interventions</string>
    <string name="notifTitle" translatable="false">Notifications</string>

    <string name="taskStatus" translatable="false">État de la tâche :</string>
    <string name="taskDone" translatable="false">Terminée</string>
    <string name="taskNotDone" translatable="false">Non terminée</string>
    <string name="chooseImage" translatable="false">Ajouter images</string>
    <string name="chooseImageGallery" translatable="false">Importer depuis la galerie</string>
    <string name="chooseImageCamera" translatable="false">Utiliser la caméra</string>
    <string name="selectVideo" translatable="false">Capturer une vidéo</string>
    <string name="recordAudio" translatable="false">Enregistrer un audio</string>
    <string name="writeComment" translatable="false">Écrire un commentaire</string>
    <string name="submitBtn" translatable="false">Valider le rapport</string>
    <string name="addComment" translatable="false">Ajouter un commentaire</string>
    <string name="resumeReportMsg">Vous avez déjà une intervention incomplète</string>
    <string name="resumeReportBtn">Reprendre</string>
    <string name="cancelReportBtn">Annuler</string>
    <string name="pressToRecordAudio">Press the mic to start recording</string>
    <!-- Number of imported medias -->
    <string name="videoAlreadyRecorded">Vous avez déjà enregistré une vidéo</string>
    <string name="commentAlreadyRecorded">Vous avez déjà ajouté un commentaire</string>
    <string name="imagesCaptured"> Images capturées</string>
    <string name="audioAlreadyRecorded">Vous avez déjà enregistré un audio</string>
    <string name="imageAlreadyRecorded">Vous avez déjà enregistré une image</string>
    <string name="btnSaveComment">Enregistrer le commentaire</string>
    <string name="videoNotRecorded">Vous n\'avez pas encore enregistré de vidéo</string>
    <string name="imagesNotCaptured">Vous n\'avez pas encore importé d\'image</string>
    <string name="audioNotRecorded">Vous n\'avez pas encore enregistré d\'audio</string>

    <!-- Msg save media -->
    <string name="saveSuccessVideoMsg">La vidéo a été ajoutée avec succès</string>
    <string name="saveFailedVideoMsg">Échec de l\'enregistrement de la vidéo</string>
    <string name="saveCancelVideoMsg">Vous avez annulé l\'enregistrement, veuillez enregistrer une nouvelle vidéo</string>

    <string name="saveSuccessImagesMsg">Images ont été ajoutées avec succès</string>
    <string name="saveSuccessImageMsg">L\'image a été ajoutée avec succès</string>
    <string name="saveFailedImageMsg">Échec de l\'enregistrement de l\'image</string>
    <string name="saveCancelImageMsg">Vous avez annulé la capture d\'image</string>

    <string name="saveSuccessAudioMsg">L\'audio a été ajouté avec succès</string>
    <string name="saveFailedAudioMsg">Échec de l\'enregistrement de l\'audio</string>
    <string name="saveCancelAudioMsg">Vous avez annulé l\'enregistrement, veuillez enregistrer un nouvel audio</string>

    <string name="saveFailedCommentMsg">Échec de l\'enregistrement du commentaire</string>
    <string name="saveSuccessCommentMsg">Le commentaire a été ajouté avec succès</string>
    <string name="fillCommentToSubmit">Veuillez remplir la section commentaire pour soumettre</string>
    <string name="fillAllMediaToSubmit">Remplir tous les rapports des médias à soumettre</string>
    <string name="fillMinMediaToSubmit">Vous n\'avez pas réussi la tâche, veuillez remplir au moins un commentaire</string>

    <string name="exitAppMsg">Êtes-vous sûr de vouloir quitter?</string>
    <string name="noCnxMainMsg">Impossible de se connecter à Internet</string>
    <string name="noCnxsecondMsg">L\'application ne peut pas fonctionner hors connexion, vérifiez votre connexion et essayez.</string>

    <string name="gradientColors">#3dbe29 , #5cb600 , #72ae00 , #85a500 , #959b00 , #b18500 , #bd7900 , #c76c00 , #d05d00 , #d84b00 , #de3700 , #de3700 , #e21717</string>

    <string name="errorOccured">Une erreur s\'est produite !</string>

    <string name="noInterventionMain">Aucune intervention programmée !</string>
    <string name="noInterventionOk">Aucune intervention effectuée !</string>


</resources>