<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@color/transparent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/interv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Intervention"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/uiTextColor"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/interv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Num : 7363753"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/uiTextColor"
                    android:textSize="15dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modeOperatoire"
                style="@style/TitlesInterventionStyle"
                android:drawableLeft="@drawable/ic_dashboard_black_24dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usedToold"
                style="@style/TitlesInterventionStyle"
                android:drawableLeft="@drawable/ic_tools_24"
                android:drawableTint="@color/uiTextColor" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Interv_desc"
                style="@style/TitlesInterventionStyle"
                android:drawableTint="@color/uiTextColor"
                android:drawableLeft="@drawable/ic_info_24"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/desc"
                        android:textColor="@color/uiTextColor"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textSize="17sp"
                        android:textStyle="normal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


