<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/uiBg"
    android:layout_marginBottom="60dp"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chaudiereName"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/uiTextColor"
                android:textSize="20dp"/>
            <!--Row1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp1Text"
                            android:textSize="@dimen/textTempSize"
                            android:layout_margin="5dp"
                            android:textColor="@color/uiTextColor"
                            android:fontFamily="sans-serif-condensed-medium"
                            />
                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/t_depart_indicator"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            app:sv_unitTextSize="10dp"
                            app:sv_minSpeed="0"
                            app:sv_maxSpeed="240"
                            app:sv_speedTextSize="22dp"
                            app:sv_unit="°C"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedometerWidth="15dp"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_withTremble="false"
                            app:sv_indicator="LineIndicator"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp2Text"
                            android:textSize="@dimen/textTempSize"
                            android:layout_margin="5dp"
                            android:textColor="@color/uiTextColor"
                            android:fontFamily="sans-serif-condensed-medium"
                            />
                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/t_retoure_indicator"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            app:sv_unitTextSize="10dp"
                            app:sv_minSpeed="0"
                            app:sv_maxSpeed="240"
                            app:sv_speedTextSize="22dp"
                            app:sv_unit="°C"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedometerWidth="15dp"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_withTremble="false"
                            app:sv_indicator="LineIndicator"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <!--Row2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp3Text"
                            android:textSize="@dimen/textTempSize"
                            android:layout_margin="5dp"
                            android:textColor="@color/uiTextColor"
                            android:fontFamily="sans-serif-condensed-medium"
                            />
                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/t_inertie_indicator"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            app:sv_unitTextSize="10dp"
                            app:sv_minSpeed="0"
                            app:sv_maxSpeed="240"
                            app:sv_speedTextSize="22dp"
                            app:sv_unit="°C"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedometerWidth="15dp"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_withTremble="false"
                            app:sv_indicator="LineIndicator"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/temp4Text"
                            android:textColor="@color/uiTextColor"
                            android:textSize="@dimen/textTempSize" />

                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/t_fumees_indicator"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_indicator="LineIndicator"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_maxSpeed="240"
                            app:sv_minSpeed="0"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedTextSize="22dp"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_speedometerWidth="15dp"
                            app:sv_unit="°C"
                            app:sv_unitTextSize="10dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_withTremble="false" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp5Text"
                            android:textSize="@dimen/textTempSize"
                            android:layout_margin="5dp"
                            android:textColor="@color/uiTextColor"
                            android:fontFamily="sans-serif-condensed-medium"
                            />
                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/depression_indicator"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            app:sv_unitTextSize="10dp"
                            app:sv_minSpeed="0"
                            app:sv_maxSpeed="15"
                            app:sv_speedTextSize="22dp"
                            app:sv_unit="Pa"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedometerWidth="15dp"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_withTremble="false"
                            app:sv_indicator="LineIndicator"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/cardTempMarginH"
                    android:layout_marginVertical="@dimen/cardTempMarginV"
                    app:cardCornerRadius="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp6Text"
                            android:textSize="@dimen/textTempSize"
                            android:layout_margin="5dp"
                            android:textColor="@color/uiTextColor"
                            android:fontFamily="sans-serif-condensed-medium"
                            />
                        <com.github.anastr.speedviewlib.SpeedView
                            android:id="@+id/luminosité_indicator"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            app:sv_unitTextSize="10dp"
                            app:sv_minSpeed="0"
                            app:sv_maxSpeed="120"
                            app:sv_speedTextSize="22dp"
                            app:sv_unit="Mmca"
                            app:sv_centerCircleRadius="12dp"
                            app:sv_unitUnderSpeedText="true"
                            app:sv_speedTextFormat="FLOAT"
                            app:sv_speedometerWidth="15dp"
                            app:sv_indicatorWidth="3dp"
                            app:sv_markWidth="2dp"
                            app:sv_indicatorLightColor="@color/black"
                            app:sv_speedometerMode="NORMAL"
                            app:sv_withTremble="false"
                            app:sv_indicator="LineIndicator"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

        <LinearLayout
            android:id="@+id/serverError"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/uiBg"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/server_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exceptionText"
                android:layout_margin="10dp"
                android:fontFamily="@font/catamaran_medium"
                android:textColor="@color/uiTextColor"
                android:textSize="24dp"
                />


        </LinearLayout>
    </LinearLayout>

